# neezer

./: .gitignore  README.md  docker-compose.yaml
app/: .dockerignore  .flake8  Dockerfile  pyproject.toml
app/.docker/: entrypoint.sh
app/artist/: admin.py  apps.py  endpoints.py  filterset.py  models.py  serializers.py  tests.py  views.py
app/artist/migrations/: 0001_initial.py  0002_album_tracks.py  0003_remove_album_tracks.py  0004_auto_20210630_0136.py  0005_auto_20210701_2125.py  0006_auto_20210701_2243.py  0007_auto_20210701_2354.py
app/authentication/: endpoints.py  serializers.py  tests.py  views.py
app/core/: settings.py  urls.py
app/playlist/: admin.py  apps.py  endpoints.py  filterset.py  models.py  serializers.py  tests.py  views.py
app/playlist/migrations/: 0001_initial.py  0002_auto_20210701_1700.py  0003_auto_20210701_1701.py  0004_auto_20210701_2125.py
app/utils/: filterset.py
