[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Lucas Ferreira <lucasferreiraek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.1.4"
psycopg2-binary = "^2.9.1"
djangorestframework = "^3.12.4"
drf-yasg = "^1.20.0"
djangorestframework-simplejwt = "^4.7.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
